--- a/lib/ghpages-template/_includes/elements/indices.html
+++ b/lib/ghpages-template/_includes/elements/indices.html
@@ -26,13 +26,15 @@
   {% capture url %}{{ doc.url }}#/{{ collection.label | downcase }}/{% endcapture %}
   {% case doc.layout %}
     {% when 'package' %}
-      {% capture link %}<svg class="icon"><use xlink:href="#folder-outline" /></svg> {{ doc.module }}{% endcapture %}
+      {% capture link %}<svg class="icon"><use xlink:href="#folder-outline" /></svg> {% include package_shortener.liquid module=doc.module %}{% endcapture %}
     {% when 'type' %}
-      {% capture link %}{{ doc.module }}.{{ doc.name }}{% endcapture %}
+      {% capture link %}{% include package_shortener.liquid module=doc.module %}.{{ doc.name }}{% endcapture %}
   {% endcase %}
   <a class="very tight smaller text item" href="{{ site.baseurl }}{{ url }}">{{ link }}</a>
 {% endfor %}
 </div>
+<p>&nbsp;</p><br/>
+<p>&nbsp;</p>
 </div>
 {% endunless %}
 {% endfor %}
