show description first line only in package page; fix interface icon typo

--- a/lib/ghpages-template/_layouts/type.html
+++ b/lib/ghpages-template/_layouts/type.html
@@ -18,7 +18,7 @@ layout: page
   </div>
   {% if page.implements %}
   <div class="item">
-    <svg class="icon"><use xlink:href="#inteface" /></svg>
+    <svg class="icon"><use xlink:href="#interface" /></svg>
     <div class="content">
       {% assign content = '' %}
       {% for interface in page.implements %}
