--- a/lib/ghpages-template/_layouts/package.html
+++ b/lib/ghpages-template/_layouts/package.html
@@ -29,11 +29,8 @@ layout: page
   {% for item in list %}
     {% capture content %}
     <a class="header" href="{{ page_module_url }}/{{ item.name }}">{{ item.name }}</a>
-    {% capture description %}{{ item.description }}{%
-      if item.description %}<br/>{% endif %}{%
-    endcapture %}
     <div class="description">
-      {{ description | markdownify | remove: '<p>' | remove: '</p>' }}
+      {{ item.description | newline_to_br | split: '<br />' | first | rstrip | markdownify | remove: '<p>' | remove: '</p>' }}{% if item.description %}<br/>{% endif %}
       <span class="smaller text"><i>Declared in:</i> {{ item.declaration }}</span>
     </div>
     {% endcapture %}
