--- a/lib/ghpages-template/_layouts/package.html
+++ b/lib/ghpages-template/_layouts/package.html
@@ -17,7 +17,7 @@ layout: page
 {% endif %}
 </div>
 
-{% assign types = "enums|structs|interfaces|delegates|classes" | split: '|'  %}
+{% assign types = "delegates|interfaces|enums|structs|classes" | split: '|'  %}
 
 {% for t in types %}
 {% if page[t] %}
