--- a/lib/ghpages-template/_layouts/type.html
+++ b/lib/ghpages-template/_layouts/type.html
@@ -76,7 +76,7 @@ layout: page
 {% capture newline %}
 {% endcapture %}
 
-{% assign attr = "constructor|fields|properties|methods" | split: '|'  %}
+{% assign attr = "signature|constructor|fields|properties|methods" | split: '|'  %}
 
 <div class="ui basic segment"><span class="anchor" id="listing">&nbsp;</span>
 <h2 class="ui dividing header">Listing</h2>
@@ -86,11 +86,11 @@ layout: page
 <span class="anchor" id="listing-{{ a }}">&nbsp;</span>
 <h3 class="ui tight header">{{ a | capitalize }}</h3>
 {% assign list = page[a] %}
-{% if a == 'constructor' %}{% assign list = "" | split: "" | push: page[a] %}{% endif %}
+{% if a == 'constructor' or a =='signature' %}{% assign list = "" | split: "" | push: page[a] %}{% endif %}
 {% if list.size > 0 %}
 <table class="ui striped definition table"><tbody>
-{% assign isFunc = false %}{% if a == 'constructor' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
-{% assign isCtor = false %}{% if a == 'constructor' %}{% assign isCtor = true %}{% endif %}
+{% assign isFunc = false %}{% if a == 'constructor' or a == 'signature' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
+{% assign isCtor = false %}{% if a == 'constructor' or a == 'signature' %}{% assign isCtor = true %}{% endif %}
 {% for item in list %}
   {% capture params %}{% include parameters.liquid params=item.parameters base_url=module_url %}{% endcapture %}
   {% capture signature %}<a href="#details-{{ a }}-{{ item.name }}">{{ item.name }}</a><span class="normal text">{{ params | rstrip }}{% if isCtor != true %}:{% include module_linker.liquid module=item.type base_url=module_url %}{% endif %}</span>{% endcapture %}
@@ -112,9 +112,9 @@ layout: page
 <span class="anchor" id="details-{{ a }}">&nbsp;</span>
 <h3 class="ui tight header">{{ a | capitalize }}</h3>
 {% assign list = page[a] %}
-{% if a == 'constructor' %}{% assign list = "" | split: "" | push: page[a] %}{% endif %}
-{% assign isFunc = false %}{% if a == 'constructor' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
-{% assign isCtor = false %}{% if a == 'constructor' %}{% assign isCtor = true %}{% endif %}
+{% if a == 'constructor' or a == 'signature' %}{% assign list = "" | split: "" | push: page[a] %}{% endif %}
+{% assign isFunc = false %}{% if a == 'constructor' or a == 'signature' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
+{% assign isCtor = false %}{% if a == 'constructor' or a == 'signature' %}{% assign isCtor = true %}{% endif %}
 {% for item in list %}
   {% capture params %}{% include parameters.liquid params=item.parameters base_url=module_url %}{% endcapture %}
   {% capture signature %}{{ item.attributes | join: ' ' }} {% if isFunc %}function {% endif %}<strong>{{ item.name }}</strong>{{ params | rstrip }}{% if isCtor != true %}:{% include module_linker.liquid module=item.type base_url=module_url %}{% endif %}{% endcapture %}
