--- a/lib/ghpages-template/_includes/parameter_signature.liquid
+++ b/lib/ghpages-template/_includes/parameter_signature.liquid
@@ -23,9 +23,9 @@ if include.param %}{%
   assign p = include.param %}{%
   if p.is_var_args == true %}...{% endif %}{{ p.name }}:{%
   if p.template_types %}{%
-    capture t %}{% include template_signature.liquid template_type=p.template_types base_url=base_url %}{% endcapture %}{{ t | rstrip }}{%
+    capture t %}{% include template_signature.liquid template_type=p.template_types base_url=include.base_url %}{% endcapture %}{{ t | rstrip }}{%
   else %}{%
-    capture ml %}{% include module_linker.liquid module=p.type base_url=base_url %}{% endcapture %}{{ ml | rstrip }}{%
+    capture ml %}{% include module_linker.liquid module=p.type base_url=include.base_url %}{% endcapture %}{{ ml | rstrip }}{%
   endif %}{%
   if p.default_value %}={%
     assign isString = false %}{% if p.type == 'system.String' %}{% assign isString = true %}{% endif %}{%
