--- a/docs/_includes/template_signature.liquid
+++ b/docs/_includes/template_signature.liquid
@@ -1,4 +1,4 @@
-{% comment %}
+{%- comment -%}
 
 template_signature
   generates templated type signatures like the following:
@@ -14,16 +14,15 @@ params:
     item_types: [{template_type1}, {template_type2}]
   }
 
-{% endcomment %}{%
-if include.template_type %}{%
-  assign tt = include.template_type %}{% capture ttl %}{% include module_linker.liquid module=tt.type base_url=include.base_url %}{% endcapture %}{{ ttl | rstrip }}{%
-  assign it = tt.item_types %}{%
-  if it.size > 0
-  %}.&lt;{%
-    for item in it %}{%
-      capture sig %}{% include template_signature.liquid template_type=item base_url=include.base_url %}{% endcapture %}{{ sig | rstrip }}{%
-      unless forloop.last %}, {% endunless %}{%
-    endfor
-  %}&gt;{%
-  endif %}{%
-endif %}
+{%- endcomment -%}
+{%- if include.template_type -%}
+  {%- assign tt = include.template_type -%}
+  {%- capture ttl -%}{% include module_linker.liquid module=tt.type base_url=include.base_url %}{%- endcapture -%}{{- ttl | rstrip -}}
+  {%- assign it = tt.item_types -%}
+  {%- if it.size > 0 -%}.&lt;
+    {%- for item in it -%}
+      {%- capture sig -%}{% include template_signature.liquid template_type=item base_url=include.base_url %}{%- endcapture -%}{{- sig | rstrip -}}
+      {% unless forloop.last %}, {% endunless %}
+    {%- endfor -%}&gt;
+  {%- endif -%}
+{%- endif -%}
