--- a/lib/ghpages-template/_includes/module_has_link.liquid
+++ b/lib/ghpages-template/_includes/module_has_link.liquid
@@ -1,4 +1,4 @@
-{% comment %}
+{%- comment -%}
 
 module_has_link
   checks site.collections[site.module_root].docs for doc with url attribute that matches include.module_url
@@ -10,17 +10,23 @@ returns:
   'true' when document for module url is found
   'false' when no document can be found
 
-{% endcomment %}{%
-assign u = include.module_url %}{%
-assign found = false %}{%
-for collection in site.collections %}{%
-  if collection.label == site.module_root %}{%
-    for doc in collection.docs %}{%
-      if u == doc.url %}{% assign found = true %}{% break %}{% endif %}{%
-      assign u1 = u | append: "/" %}{%
-      if u1 == doc.url %}{% assign found = true %}{% break %}{% endif %}{%
-    endfor %}{%
-    break %}{%
-  endif %}{%
-endfor %}{%
-if found %}true{% else %}false{% endif %}
+{%- endcomment -%}
+{%- assign u = include.module_url -%}
+{%- assign found = false -%}
+{%- for collection in site.collections -%}
+  {%- if collection.label == site.module_root -%}
+    {%- for doc in collection.docs -%}
+      {%- if u == doc.url -%}
+        {%- assign found = true -%}
+        {%- break -%}
+      {%- endif -%}
+      {%- assign u1 = u | append: "/" -%}
+      {%- if u1 == doc.url -%}
+        {%- assign found = true -%}
+        {%- break -%}
+      {%- endif -%}
+    {%- endfor -%}
+    {%- break -%}
+  {%- endif -%}
+{%- endfor -%}
+{%- if found -%}true{%- else -%}false{%- endif -%}
