--- a/docs/_includes/module_has_link.liquid
+++ b/docs/_includes/module_has_link.liquid
@@ -4,7 +4,7 @@ module_has_link
   checks site.collections[site.module_root].docs for doc with url attribute that matches include.module_url
 
 params:
-  module_url="/path/to/foo/bar/Baz"
+  module_url="/api/foo/bar/Baz"
 
 returns:
   'true' when document for module url is found
@@ -14,7 +14,8 @@ returns:
 {%- assign u = include.module_url -%}
 {%- assign found = false -%}
 {%- for collection in site.collections -%}
-  {%- if collection.label == site.module_root -%}
+  {%- assign collection_root = collection.label | prepend: "/" -%}
+  {%- if collection_root == site.module_root -%}
     {%- for doc in collection.docs -%}
       {%- if u == doc.url -%}
         {%- assign found = true -%}
