--- a/docs/_includes/template_signature.liquid
+++ b/docs/_includes/template_signature.liquid
@@ -9,6 +9,7 @@ template_signature
 
 params:
   base_url="/path/to"
+  module_root="/api"
   template_type: {
     type: package.Type
     item_types: [{template_type1}, {template_type2}]
@@ -17,11 +18,11 @@ params:
 {%- endcomment -%}
 {%- if include.template_type -%}
   {%- assign tt = include.template_type -%}
-  {%- capture ttl -%}{% include module_linker.liquid module=tt.type base_url=include.base_url %}{%- endcapture -%}{{- ttl | rstrip -}}
+  {%- capture ttl -%}{% include module_linker.liquid module=tt.type base_url=include.base_url module_root=include.module_root %}{%- endcapture -%}{{- ttl | rstrip -}}
   {%- assign it = tt.item_types -%}
   {%- if it.size > 0 -%}.&lt;
     {%- for item in it -%}
-      {%- capture sig -%}{% include template_signature.liquid template_type=item base_url=include.base_url %}{%- endcapture -%}{{- sig | rstrip -}}
+      {%- capture sig -%}{% include template_signature.liquid template_type=item base_url=include.base_url module_root=include.module_root %}{%- endcapture -%}{{- sig | rstrip -}}
       {% unless forloop.last %}, {% endunless %}
     {%- endfor -%}&gt;
   {%- endif -%}
