--- a/docs/_layouts/type.html
+++ b/docs/_layouts/type.html
@@ -2,15 +2,13 @@
 layout: page
 ---
 
-{% capture module_url %}{{ site.baseurl }}/{{ site.module_root }}{% endcapture %}
-
 <span class="anchor" id="heading">&nbsp;</span>
 <h1 class="ui dividing header">{{ page.name }}</h1>
 
 <div class="ui list">
   <div class="item">
     <svg class="icon"><use xlink:href="#folder-outline" /></svg>
-    <div class="content">{% include module_linker.liquid module=page.module base_url=module_url %}</div>
+    <div class="content">{% include module_linker.liquid module=page.module base_url=site.baseurl module_root=site.module_root %}</div>
   </div>
   <div class="item">
     <svg class="icon"><use xlink:href="#file-outline" /></svg>
@@ -22,7 +20,8 @@ layout: page
     <div class="content">
       {% assign content = '' %}
       {% for interface in page.implements %}
-        {% capture link %}<a class="section" href="{{ module_url }}/{{ interface.module | split: '.' | join: '/' }}/{{ interface.name }}">{{ interface.name }}</a>{% endcapture %}
+        {% assign module = interface.module | append: '.' | append: interface.name %}
+        {% capture link %}{% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
         {% unless forloop.last %}
           {% assign link = link | append: ', ' %}
         {% endunless %}
@@ -41,7 +40,8 @@ layout: page
         <span class="section active">{{ page.name }}</span>
         {% for ancestor in page.ancestors %}
         <svg class="icon divider"><use xlink:href="#chevron-right" /></svg>
-        <a class="section" href="{{ module_url }}/{{ ancestor.module | split: '.' | join: '/' }}/{{ ancestor.name }}">{{ ancestor.name }}</a>
+        {% assign module = ancestor.module | append: '.' | append: ancestor.name %}
+        {% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=site.module_root %}
         {% endfor %}
       </div>
     </div>
@@ -53,7 +53,8 @@ layout: page
     <div class="content">
       {% assign content = '' %}
       {% for descendant in page.descendants %}
-        {% capture link %}<a class="section" href="{{ module_url }}/{{ descendant.module | split: '.' | join: '/' }}/{{ descendant.name }}">{{ descendant.name }}</a>{% endcapture %}
+        {% assign module = descendant.module | append: '.' | append: descendant.name %}
+        {% capture link %}{% include module_linker.liquid module=module html_class='section' base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
         {% unless forloop.last %}
           {% assign link = link | append: ', ' %}
         {% endunless %}
@@ -94,8 +95,8 @@ layout: page
 {% assign isFunc = false %}{% if a == 'constructor' or a == 'signature' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
 {% assign isCtor = false %}{% if a == 'constructor' %}{% assign isCtor = true %}{% endif %}
 {% for item in list %}
-  {% capture params %}{% include parameters.liquid params=item.parameters base_url=module_url %}{% endcapture %}
-  {% capture signature %}<a href="#details-{{ a }}-{{ item.name }}">{{ item.name }}</a><span class="normal text">{{ params | rstrip }}{% if isCtor != true %}:{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=module_url %}{% else %}{% include module_linker.liquid module=item.type base_url=module_url %}{% endif %}{% endif %}</span>{% endcapture %}
+  {% capture params %}{% include parameters.liquid params=item.parameters base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
+  {% capture signature %}<a href="#details-{{ a }}-{{ item.name }}">{{ item.name }}</a><span class="normal text">{{ params | rstrip }}{% if isCtor != true %}:{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=site.baseurl module_root=site.module_root %}{% else %}{% include module_linker.liquid module=item.type base_url=site.baseurl module_root=site.module_root %}{% endif %}{% endif %}</span>{% endcapture %}
   {% assign d_lines = item.description | split: newline %}
   <tr><td{% if forloop.first %} class="collapsing"{% endif %}>{{ signature | rstrip }}</td><td>{{ d_lines | first | markdownify | remove: '<p>' | remove: '</p>' | remove: '</p>' | rstrip }}</td></tr>
 {% endfor %}
@@ -118,8 +119,8 @@ layout: page
 {% assign isFunc = false %}{% if a == 'constructor' or a == 'signature' or a == 'methods' %}{% assign isFunc = true %}{% endif %}
 {% assign isCtor = false %}{% if a == 'constructor' %}{% assign isCtor = true %}{% endif %}
 {% for item in list %}
-  {% capture params %}{% include parameters.liquid params=item.parameters base_url=module_url %}{% endcapture %}
-  {% capture signature %}{{ item.attributes | join: ' ' }} {% if isFunc %}function {% endif %}<strong>{{ item.name }}</strong>{{ params | rstrip }}{% if isCtor != true %}:{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=module_url %}{% else %}{% include module_linker.liquid module=item.type base_url=module_url %}{% endif %}{% endif %}{% endcapture %}
+  {% capture params %}{% include parameters.liquid params=item.parameters base_url=site.baseurl module_root=site.module_root %}{% endcapture %}
+  {% capture signature %}{{ item.attributes | join: ' ' }} {% if isFunc %}function {% endif %}<strong>{{ item.name }}</strong>{{ params | rstrip }}{% if isCtor != true %}:{% if item.template_types %}{% include template_signature.liquid template_type=item.template_types base_url=site.baseurl module_root=site.module_root %}{% else %}{% include module_linker.liquid module=item.type base_url=site.baseurl module_root=site.module_root %}{% endif %}{% endif %}{% endcapture %}
   <div class="ui tight vertical segment"><span class="anchor" id="details-{{ a }}-{{ item.name }}">&nbsp;</span><h4 class="ui very tight header">{{ item.name }}{% if isFunc %}(){% endif %}</h4>
   <p><code>{{ signature }}</code></p>
   {{ item.description | markdownify }}
