--- a/lib/ghpages-template/_includes/parameter_signature.liquid
+++ b/lib/ghpages-template/_includes/parameter_signature.liquid
@@ -7,6 +7,7 @@ parameter_signature
 
 params:
   base_url="/path/to"
+  module_root="/api"
   param: {
     name: name
     default_value: '[]'
@@ -23,9 +24,9 @@ params:
   {%- assign p = include.param -%}
   {%- if p.is_var_args == true -%}...{%- endif -%}{{- p.name -}}:
   {%- if p.template_types -%}
-    {%- capture t -%}{% include template_signature.liquid template_type=p.template_types base_url=include.base_url %}{%- endcapture -%}{{- t | rstrip -}}
+    {%- capture t -%}{% include template_signature.liquid template_type=p.template_types base_url=include.base_url module_root=include.module_root %}{%- endcapture -%}{{- t | rstrip -}}
   {%- else -%}
-    {%- capture ml -%}{% include module_linker.liquid module=p.type base_url=include.base_url %}{%- endcapture -%}{{- ml | rstrip -}}
+    {%- capture ml -%}{% include module_linker.liquid module=p.type base_url=include.base_url module_root=include.module_root %}{%- endcapture -%}{{- ml | rstrip -}}
   {%- endif -%}
   {%- if p.default_value -%}=
     {%- assign isString = false -%}{%- if p.type == 'system.String' -%}{%- assign isString = true -%}{%- endif -%}
