--- a/lib/ghpages-template/_includes/parameters.liquid
+++ b/lib/ghpages-template/_includes/parameters.liquid
@@ -7,6 +7,7 @@ parameters
 
 params:
   base_url="/path/to"
+  module_root="/api"
   params: [
     {
       name: name
@@ -20,7 +21,7 @@ params:
 {%- endcomment -%}
 ({%- if include.params -%}
   {%- for p in include.params -%}
-    {%- capture p_sig -%}{% include parameter_signature.liquid param=p base_url=include.base_url %}{%- endcapture -%}{{- p_sig | rstrip -}}
+    {%- capture p_sig -%}{% include parameter_signature.liquid param=p base_url=include.base_url module_root=include.module_root %}{%- endcapture -%}{{- p_sig | rstrip -}}
     {% unless forloop.last %}, {% endunless %}
   {%- endfor -%}
 {%- endif -%})
